Fix alignment of tally
(and order everything correctly)

--- a/src/frontend/scss/_topic.scss
+++ b/src/frontend/scss/_topic.scss
@@ -1,13 +1,12 @@
 .topic {
   background-color: white;
   margin-bottom: 16px;
-  border-radius: 4px;
 }
 
 .topic__tally {
-  width: 100%;
-  font-size: 15px;
   background-color: siteColor(deviant-grey);
+  font-size: 15px;
+  width: 100%;
 
   &__inner {
     background: siteColor(bof-grass-green);
@@ -48,25 +47,27 @@
   }
 
   .topic__tally {
-    text-indent: 0;
+    align-items: center;
+    display: flex;
     height: auto;
     position: relative;
+    text-indent: 0;
     width: auto;
 
     &__inner {
-      position: absolute;
-      top: 0;
       bottom: 0;
       height: auto;
+      position: absolute;
+      top: 0;
       z-index: 0;
     }
 
     &__text {
-      z-index: 1;
-      position: relative;
-      padding: 16px;
-      text-align: center;
       display: block;
+      padding: 16px;
+      position: relative;
+      text-align: center;
+      z-index: 1;
     }
   }
 
